# headfake

./: .gitignore  404.html  HISTORY.md  Makefile  README.md  RELEASE.md  cap_episodes.yaml  common_codes.txt  generate-fake-data.py  generate-mock-data.py  generate.py  index.html  mdconfig.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.txt  tox.ini  tutorial1.yaml  tutorial3.yaml  tutorial3a.txt  uhl_patients.yaml
.github/workflows/: main.yml
api/cli/: index.html
api/error/: index.html
api/field/core/: index.html
api/field/derived/: index.html
api/field/faker/: index.html
api/field/id/: index.html
api/fieldset/: index.html
api/headfake/: index.html
api/output/: index.html
api/transformer/: index.html
api/util/: index.html
discussion/initialising-headfake/: index.html
docs/: index.md  installation.md  usage.md
docs/api/: cli.md  error.md  field.md  fieldset.md  headfake.md  output.md  transformer.md  util.md
docs/api/field/: core.md  derived.md  faker.md  id.md
docs/discussion/: core-fields.md  fieldsets.md  initialising-headfake.md
docs/how-to/: add-a-lookup-field.md  combine-field-values.md  create-custom-field.md  create-custom-fields.md  create-custom-transformers.md  exclude-fields-from-the-output.md  generate-identical-datasets.md
docs/tutorials/: tutorial1.md  tutorial2.md  tutorial3.md
examples/: screening.yaml
examples/cap_episodes/: cap_episodes.yaml
examples/exceed/: clin_data.yaml
examples/test_data/: patients.txt
examples/uhl_patients/: uhl_patients.yaml
headfake/: __init__.py  cli.py  error.py  field.py  fieldset.py  headfake.py  output.py  transformer.py  util.py
headfake/examples/: admission.json  patients.yaml  screening.yaml
headfake/field/: __init__.py  core.py  derived.py  faker.py  id.py
how-to/add-a-lookup-field/: index.html
how-to/combine-field-values/: index.html
how-to/create-custom-fields/: index.html
how-to/create-custom-transformers/: index.html
how-to/exclude-fields-from-the-output/: index.html
how-to/generate-identical-datasets/: index.html
installation/: index.html
mockd/: __init__.py  base.py  error.py  field.py  output.py  selector.py  transformer.py  util.py
output/: test_clinical_data.txt  test_patients.txt
tests/: pytest.ini  test_cli.py  test_examples.py  test_field.py  test_fieldset.py  test_transformer.py  test_util.py
tests/field/: test_field_common.py  test_field_core.py  test_field_derived.py  test_field_faker.py  test_field_id.py
tests/templates/: test1.yaml  test2.yaml  test3.yaml
tutorials/tutorial1/: index.html
tutorials/tutorial2/: index.html
tutorials/tutorial3/: index.html
usage/: index.html
