[metadata]
name = headfake
description = Health data faker
long_descripton = file: README.md
author = RCF Informatics Group
author_email = robert.free@uhl-tr.nhs.uk
license = GPL v3
url = https://github.com/rcfgroup
edit_on_github = True
github_project = rcfgroup/headfake
classifiers =
  'Programming Language :: Python'
  'Programming Language :: Python :: 3'
  'Programming Language :: Python :: 3.5'
  'Programming Language :: Python :: 3.6'
  'Programming Language :: Python :: 3.7'
  'Programming Language :: Python :: 3.8'
  'Development Status :: 4 - Beta'
  'Intended Audience :: Healthcare Industry'
  'Intended Audience :: Science/Research'
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
  'Natural Language :: English'
  'Operating System :: OS Independent'
  'Topic :: Scientific/Engineering :: Bio-Informatics'


[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
  attrs
  faker
  pandas
  pyyaml
  scipy

[options.entry_points]
console_scripts =
  headfake = headfake.cli:Command.run

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mock
docs =
  mkdocs


[tool:pytest]
minversion = 3.0
testpaths = "tests"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info"

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}


[isort]
multi_line_output=3
force_grid_wrap=0
use_parentheses=True
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = clinicle
include_trailing_comma = True
length_sort = True
