[metadata]
name = headfake
description = Health data faker
author = Rob Free
author_email = rcfree@pm.me
license = MIT
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

keywords = fake, data, generation, faker, pydbgen

url = https://github.com/rcfgroup/headfake

github_project = rcfgroup/headfake
classifiers =
    Programming Language :: Python  
    Programming Language :: Python :: 3  
    Programming Language :: Python :: 3.5  
    Programming Language :: Python :: 3.6  
    Programming Language :: Python :: 3.7  
    Programming Language :: Python :: 3.8  
    Development Status :: 5 - Production/Stable  
    Intended Audience :: Healthcare Industry  
    Intended Audience :: Science/Research  
    License :: OSI Approved :: MIT License  
    Natural Language :: English  
    Operating System :: OS Independent  
    Topic :: Scientific/Engineering :: Artificial Intelligence  
    Topic :: Scientific/Engineering :: Bio-Informatics  

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
  attrs
  faker
  pandas
  pyyaml
  scipy

[options.entry_points]
console_scripts =
  headfake = headfake.cli:Command.run

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mock
docs =
  mkdocs


[tool:pytest]
minversion = 3.0
testpaths = "tests"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info"

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don  t complain about packages we have installed
  except ImportError
  # Don  t complain if tests don  t hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don  t complain about script hooks
  def main\(.*\):
  # Ignore branches that don  t pertain to this version of Python
  pragma: py{ignore_python_version}


